<resources>
    <string name="app_name">RustLabs</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="auth_button">Login</string>
    <string name="title_weapon">Weapons</string>
    <string name="title_armor">Armor</string>
    <string name="title_structures">Structures</string>
    <string name="title_search">Search</string>
    <string name="title_servers">Servers</string>
    <string name="sample_weapon_title">Assault Rifle</string>
    <string name="sample_weapon_damage">50</string>
    <string name="sample_weapon_top_location">Locked Crate</string>
    <string name="sample_weapon_ammo_type">5.56 Rifle Ammo</string>
    <string name="damage">Damage:</string>
    <string name="sample_armor_title">Hazmat Suit</string>
    <string name="sample_projectile_protection">30</string>
    <string name="sample_melee_protection">30</string>
    <string name="sample_protection_cold">8</string>
    <string name="sample_protection_radiation">50</string>
    <string name="sample_top_location">Crate</string>
    <string name="top_location_const">Top Location:</string>
    <string name="sample_structure_name">Armored Double Door</string>
    <string name="sample_structure_title">Armored Double Door</string>
    <string name="health_const">Health:</string>
    <string name="sample_health_value">800</string>
    <string name="sample_c4_cost">2</string>
    <string name="sample_rocket_cost">4</string>
    <string name="sample_satchel_cost">12</string>
    <string name="sample_explosive_ammo_cost">200</string>
    <string name="add_tip">Add tip</string>
    <string name="hint_tip">What is your experience?</string>
    <string name="cancel">CANCEL</string>
    <string name="submit">SUBMIT</string>
    <string name="message_no_tips">Be the first to leave a tip!</string>
    <string name="const_ammo_type">Ammo Type:</string>
    <string name="const_damage">Damage:</string>
    <string name="const_top_location">Top Location:</string>
    <string name="const_craft_cost">Craft Cost:</string>
    <string name="sample_armor_craft_cost">5 Tarp, 2 Sewing Kits, 8 High Quality Metal</string>
</resources>