<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_weapon"
        android:icon="@android:drawable/ic_menu_mylocation"
        android:title="@string/title_weapon" />

    <item
        android:id="@+id/navigation_armor"
        android:icon="@android:drawable/stat_sys_headset"
        android:title="@string/title_armor" />
    <item
        android:id="@+id/navigation_structures"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_structures" />

</menu>