<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tip_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/secondary_background"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/add_tip"
        android:textColor="@color/primary_text" />

    <EditText
        android:id="@+id/item_form_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/hint_tip"
        android:textColor="@color/primary_text"
        android:textColorHint="@color/background_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/item_form_cancel"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/background_text"
            android:text="@string/cancel"
            android:textColor="@color/primary_text" />


        <Button
            android:id="@+id/item_form_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/secondary_background"
            android:text="@string/submit"
            android:textColor="@color/link_text" />

    </LinearLayout>

</LinearLayout>
