<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/primary_background"
    android:orientation="vertical"
    android:padding="8dp">

    <ImageView
        android:id="@+id/weapon_image"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@color/secondary_background"
        android:scaleType="centerCrop"
        android:src="@mipmap/ar_enlarged_no_trim_foreground" />

    <TextView
        android:id="@+id/armor_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/weapon_image"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="-2dp"
        android:layout_marginEnd="118dp"
        android:layout_toEndOf="@+id/weapon_image"
        android:text="@string/sample_weapon_title"
        android:textAllCaps="false"
        android:textColor="@color/link_text"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/weapon_damage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top_location_const"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_toEndOf="@+id/const_damage_view"
        android:text="@string/sample_weapon_damage"
        android:textColor="@color/primary_text" />

    <TextView
        android:id="@+id/const_damage_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top_location_const"
        android:layout_alignStart="@+id/armor_name"
        android:layout_marginStart="1dp"
        android:layout_marginTop="3dp"
        android:text="@string/damage"
        android:textColor="@color/primary_text" />

    <TextView
        android:id="@+id/top_location_const"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/armor_name"
        android:layout_alignStart="@+id/armor_name"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:text="@string/sample_weapon_ammo_type"
        android:textColor="@color/primary_text" />

</RelativeLayout>
