<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tertiary_background"
    tools:context="com.example.rustlabs.StructureDetailActivity">

    <RelativeLayout
        android:id="@+id/structure_top_card"
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:background="@color/primary_background"
        android:elevation="4dp">

        <!-- Back button -->

        <ImageView
            android:id="@+id/structure_image"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_alignTop="@+id/text_layout"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="16dp"
            android:alpha="1.0"
            android:background="@color/secondary_background"
            android:scaleType="centerCrop"
            tools:src="@mipmap/armored_double_door_foreground" />

        <TextView
            android:id="@+id/structure_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:textColor="@color/link_text"
            android:textSize="28dp"
            android:textStyle="bold"
            tools:text="@string/sample_structure_title" />

        <TextView
            android:id="@+id/structure_num_tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/text_layout"
            android:layout_marginStart="2dp"
            android:layout_marginBottom="0dp"
            android:layout_toEndOf="@+id/text_layout"
            android:gravity="center"
            android:textColor="@color/background_text"
            tools:text="(10)" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/text_layout"
            android:layout_width="196dp"
            android:layout_height="188dp"
            android:layout_below="@+id/structure_name"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:background="@color/secondary_background">

            <TextView
                android:id="@+id/const_structure_health"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/health_const"
                android:textColor="@color/primary_text"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView9" />

            <TextView
                android:id="@+id/structure_health"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/sample_health_value"
                android:textColor="@color/primary_text"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/const_structure_health"
                app:layout_constraintTop_toTopOf="@+id/const_structure_health" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toTopOf="@+id/imageView7"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/c4_foreground" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toTopOf="@+id/imageView8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView6"
                app:srcCompat="@mipmap/rocket_foreground" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toTopOf="@+id/imageView9"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView7"
                app:srcCompat="@mipmap/explosive_ammo_foreground" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toTopOf="@+id/const_structure_health"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView8"
                app:srcCompat="@mipmap/satchel_foreground" />

            <TextView
                android:id="@+id/c4_cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/sample_c4_cost"
                android:textColor="@color/primary_text"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/imageView6"
                app:layout_constraintTop_toTopOf="@+id/imageView6" />

            <TextView
                android:id="@+id/rocket_cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/sample_rocket_cost"
                android:textColor="@color/primary_text"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/imageView7"
                app:layout_constraintTop_toTopOf="@+id/imageView7" />

            <TextView
                android:id="@+id/explosive_ammo_cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/sample_explosive_ammo_cost"
                android:textColor="@color/primary_text"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/imageView8"
                app:layout_constraintTop_toTopOf="@+id/imageView8" />

            <TextView
                android:id="@+id/satchel_cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/sample_satchel_cost"
                android:textColor="@color/primary_text"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/imageView9"
                app:layout_constraintTop_toTopOf="@+id/imageView9" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageButton
            android:id="@+id/structure_button_back"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_alignTop="@+id/structure_name"
            android:layout_alignParentStart="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/primary_background"
            app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

    </RelativeLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/show_tip_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/structure_top_card"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="-28dp"
        android:background="@color/primary_background"
        app:srcCompat="@android:drawable/ic_input_add" />

    <!-- Ratings -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_tips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/structure_top_card"
        android:background="@android:color/transparent"
        android:clipToPadding="false"
        android:paddingTop="28dp"
        android:paddingBottom="16dp"
        android:visibility="gone"
        tools:listitem="@layout/item_tip" />

    <!-- View for empty ratings -->
    <LinearLayout
        android:id="@+id/view_empty_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/structure_top_card"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/tertiary_background"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@mipmap/logo_foreground" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message_no_tips"
            android:textColor="@color/background_text" />

    </LinearLayout>

</RelativeLayout>
